These are the release notes for the Diff extension.

Extension page on mediawiki.org: https://www.mediawiki.org/wiki/Extension:Diff


=== Version 0.8 ===
dev

; Improvements

* MapPatcher will now report conflicts for remove operations that specify a value to be removed
different from the value in the structure being patched.

=== Version 0.7 ===
2013-07-16

; Improvements

* Added extra tests for MapPatcher and ListPatcher
* Added extra tests for Diff
* Added extra tests for MapDiffer
* Added @covers tags to the unit tests to improve coverage report accuracy

; Removals

* Removed static methods from ListDiff and MapDiff (all deprecated since 0.4)
* Removed DiffOpTestDummy

; Bug fixes

* MapPatcher will now no longer stop patching after the first remove operation it encounters
* MapPatcher now always treats its top level input diff as a map diff
* Fixed several issues in ListPatcherTest

=== Version 0.6 ===
2013-05-08

; Compatibility changes

* The tests can now run independently of MediaWiki
* The tests now require PHPUnit 3.7 or later

; Additions

* Added phpunit.php runner in the tests directory
* Added Diff\Comparer\ValueComparer interface with CallbackComparer and StrictComparer implementations
* Added MapPatcher::setValueComparer to facilitate patching maps containing objects
* Added PHPUnit configuration file using the new tests/bootstrap.php

; Removals

* GenericArrayObject has been removed from this package.
  Diff derives from ArrayObject rather than GenericArrayObject.
  Its interface has not changed expect for the points below.
* The getObjectType method in Diff (previously defined in GenericArrayObject)
  is now private rather than public.
* Adding a non-DiffOp element to a Diff will now result in an InvalidArgumentException
  rather than a MWException.
* Removed Diff\Exception

=== Version 0.5 ===
2013-02-26

; Additions

* Added DiffOpFactory
* Added DiffOp::toArray
* Added CallbackListDiffer
* Added MapDiffer::setComparisonCallback
